[gd_scene load_steps=11 format=3 uid="uid://4pq86yf6s3vj"]

[ext_resource type="AudioStream" uid="uid://bfg4twpqxk5g" path="res://assets/Sounds/sfx/garibot_damage.mp3" id="1"]
[ext_resource type="Script" uid="uid://bg0ew20kyny53" path="res://scenes/player/Player.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/player/PlayerBody.tscn" id="3"]
[ext_resource type="Script" uid="uid://bwms31fyo444w" path="res://scenes/blasters/BlasterMaster.gd" id="4"]
[ext_resource type="AudioStream" uid="uid://cuvpri8yra4xu" path="res://assets/Sounds/sfx/roll_garibot.mp3" id="5"]
[ext_resource type="AudioStream" uid="uid://byhg5hlsjp6hd" path="res://assets/Sounds/sfx/garibot_jump.mp3" id="6"]
[ext_resource type="PackedScene" uid="uid://cv4p403ke1ot6" path="res://scenes/player/FollowItems.tscn" id="7"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(20, 59.9854)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(27.4384, 5.65632)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(40.844, 60.2354)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 15388
script = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")
__meta__ = {
"_edit_lock_": true
}

[node name="Debug" type="Node2D" parent="."]
visible = false

[node name="Velocity" type="Label" parent="Debug"]
offset_left = -19.3711
offset_top = -78.8406
offset_right = 20.6289
offset_bottom = -64.8406
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "velocity"

[node name="State" type="Label" parent="Debug"]
offset_left = -20.5334
offset_top = -97.2431
offset_right = 19.4666
offset_bottom = -83.2431
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "state"

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -400
limit_right = 20000
limit_bottom = 900
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 20.0

[node name="FollowItems" parent="." instance=ExtResource("7")]

[node name="SFX" type="Node2D" parent="."]

[node name="Roll" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("5")

[node name="Jump" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("6")
volume_db = 1.0

[node name="Damage" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("1")

[node name="PlayerBody" parent="." instance=ExtResource("3")]
position = Vector2(-1, 12)

[node name="Blasters" type="Node2D" parent="PlayerBody"]
position = Vector2(8, -12)
script = ExtResource("4")

[node name="JumpHit" type="Area2D" parent="." groups=["player_hit"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpHit"]
position = Vector2(0, 26)
shape = SubResource("2")

[node name="SpinHit" type="Area2D" parent="." groups=["player_hit"]]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpinHit"]
visible = false
modulate = Color(0.482353, 0.705882, 0.121569, 1)
z_index = 20
shape = SubResource("3")

[connection signal="anim_finished" from="PlayerBody" to="PlayerBody/Blasters" method="_on_PlayerBody_anim_finished"]
[connection signal="body_entered" from="SpinHit" to="." method="_on_SpinHit_body_entered" flags=3]
